--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jira Software Clone</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -32,6 +34,13 @@
         </div>
     </div>
     </main>
+    <footer>
+        <div class="footer">
+            <strong>Features : </strong>
+            <p>* You can create your task by clicking on 'create' button.</p>
+            <p>* After adding tasks you can drag each task in different zone.</p>
+        </div>
+    </footer>
     <script src="./jscript.js"></script>
 </body>
 
